html pages added

--- a/public/app/views/page1-2.html
+++ b/public/app/views/page1-2.html
@@ -1,1 +1,17 @@
- test file
+<div class="col-xs-12">
+    <p>This is page 1 - 2</p>
+</div>
+<div class="col-xs-12">
+    <h1>First Heading</h1>
+</div>
+<div class="col-xs-6">
+    <p>First col-xs-6</p>
+</div>
+<div class="col-xs-6">
+    <p>Second col-xs-6</p>
+</div>
+<div class="col-xs-12">
+    <footer>
+        <p>This is the footer</p>
+    </footer>
+</div>
