--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-        <div class="navbar-header" tour-step tour-step-title="Main Menu" tour-step-content="Navigate the site using this menu." tour-step-order="0"
-            tour-step-placement="right">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+        <!-- tour-step tour-step-title="Main Menu" tour-step-content="Navigate the site using this menu." tour-step-order="0" tour-step-placement="right" -->
+        <div class="navbar-header">
+            <a class="navbar-brand" ui-sref="main.home" ui-sref-active="{'active': 'main.home'}">WebSiteName</a>
         </div>
+        <!-- tour-step tour-step-title="Settings" tour-step-content="Click here to change your settings." tour-step-order="1" -->
         <ul class="nav navbar-nav">
-            <li ui-sref-active="{'active': 'main.home'}" tour-step tour-step-title="Settings" tour-step-content="Click here to change your settings."
-                tour-step-order="1">
+            <li ui-sref-active="{'active': 'main.home'}">
                 <a ui-sref="main.home">Home</a>
             </li>
             <li class="dropdown" ui-sref-active="{'active': 'main.home.page1'}">
@@ -28,3 +28,8 @@
         </ul>
     </div>
 </nav>
+<div class="container">
+    <button class="btn btn-primary">Start Tour</button>
+    <h1>Let's start the tour</h1>
+</div>
+<div ui-view="appContent"></div>
