--- a/public/app/views/page1-1.html
+++ b/public/app/views/page1-1.html
@@ -1,16 +1,21 @@
-<div class="col-xs-12">
+<div class="col-xs-12" tour-step="page1Step1" tour-step-belongs-to="testTour" tour-step-order="2" tour-step-title="Hello input"
+    tour-step-content="Hello input" tour-step-backdrop="true" tour-step-placement="bottom" tour-step-animation=true>
     <p>This is page 1 -1</p>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12" tour-step="page1Step2" tour-step-belongs-to="testTour" tour-step-order="2" tour-step-title="Hello input"
+    tour-step-content="Hello input" tour-step-backdrop="true" tour-step-placement="bottom" tour-step-animation=true>
     <h1>First Heading</h1>
 </div>
-<div class="col-xs-6">
+<div class="col-xs-6" tour-step="page1Step3" tour-step-belongs-to="testTour" tour-step-order="2" tour-step-title="Hello input"
+    tour-step-content="Hello input" tour-step-backdrop="true" tour-step-placement="bottom" tour-step-animation=true>
     <p>First col-xs-6</p>
 </div>
-<div class="col-xs-6">
+<div class="col-xs-6" tour-step="page1Step4" tour-step-belongs-to="testTour" tour-step-order="2" tour-step-title="Hello input"
+    tour-step-content="Hello input" tour-step-backdrop="true" tour-step-placement="bottom" tour-step-animation=true>
     <p>Second col-xs-6</p>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12" tour-step="page1Step5" tour-step-belongs-to="testTour" tour-step-order="2" tour-step-title="Hello input"
+    tour-step-content="Hello input" tour-step-backdrop="true" tour-step-placement="bottom" tour-step-animation=true>
     <footer>
         <p>This is the footer</p>
     </footer>
