--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -32,7 +32,8 @@
     </div>
 </nav>
 <div class="container">
-    <button class="btn btn-primary" ng-click="toggleTour()">Start Tour</button>
-    <h1>Let's start the tour</h1>
+    <button class="btn btn-primary" ng-click="login()">Login</button>
+    <button class="btn btn-primary" ng-click="logout()">Logout</button>
+    <!-- <h1>Let's start the tour</h1> -->
 </div>
 <div ui-view="appContent"></div>
